
 - (expected) clean-up of libusb API variants support [#300 and follow-ups]

 - (expected) CI automation for coding style

 - (expected) CI automation for driver flags and variables to be certainly
   documented, handled in augeas lenses, nutconf classes, etc.

 - (expected) CI automation for use of data points in drivers that conform
   to patterns defined in link:docs/nut-names.txt[]

 - `snmp-ups` driver updates:
   * Define an internal `SU_FLAG_MAPPING_HANDLED` to check if the subdriver
     code (mapping table) and the data found from device walk sit together
     well -- namely, that we successfully use reasonably many of the existing
     mappings. Suggest how user can help improve the driver if too few data
     points were seen, or if the `mibs=auto` detection only found the fallback
     IETF mapping. [PR #3095]

 - `usbhid-ups` driver updates:
   * Declared support for APC with USB ID `051d:0005` (details may evolve
     as the devices become better known). [issue #3047, PR #3081]
   * Improved support for Eaton 5S1500LCD (US version). [#2380]
   * For `ups.status` processing, do not assume that `!online`==`offline`,
     it may well be that the device just did not report anything (e.g. if
     it does not really talk USB HID). [#3080]
   * Suggest iterative testing with explicit `subdrivers` if collected data
     looks wrong. [#2058, #3061 et al]
   * Check if the subdriver code (mapping table) and the device report
     descriptor sit together well -- namely, that we do not unwittingly
     ignore any useful reports, and that we successfully use reasonably many
     of the existing mappings. Suggest how user can help improve the driver
     if too few data points were seen. [#3082, #3095]

 - `upslog` tool updates:
   * Updated `help()` and failure messages to suggest `-m '*,-'` for logging
     of all known local devices to stdout. [#3083]

 - `configure` script options:
   * Introduced `--with-python{,2,3}-modules-dir` to specify PyNUT(Client)