@@ -128,6 +128,7 @@ typedef struct item_t {
 #define QX_FLAG_RANGE		512UL	/* Ranges for this var available and are stored in info_rw. */
 #define QX_FLAG_NONUT		1024UL	/* This var doesn't have a corresponding var in NUT. */
 #define QX_FLAG_SKIP		2048UL	/* Skip this var: this item won't be processed. */
+#define QX_FLAG_MAPPING_HANDLED		4096UL	/* raised internally if any (sub)driver handling loop care about this report; if not, may be a point for improvement... */
 
 #define MAXTRIES		3	/* Max number of retries */
 
